--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,20 +1,20 @@
 @charset "utf-8";
 /* CSS Document */
 
-
 @font-face {
 	font-family: Blern;
-	src: url(Blern_Regular.otf);
+	src: url("fonts/Blern_Regular.otf");
 }
 
 @font-face {
 	font-family: Abel;
-	src: url(Abel-Regular.ttf);
+	src: url("fonts/Abel-Regular.ttf");
 }
 body {
 	background-color:#1E2B6E;
 	height: 200px;
-	padding: 25px;
+	padding-right: 30px;
+	padding-left: 30px;
 	
 	font-family: Georgia;
 	text-align: center;
@@ -25,16 +25,98 @@ body {
 
 h1 {
 	font-family: Blern;
+	font-size: 80px;
 }
 
-header {
+a.signIn:link {
+	background-color: #433BA5;
+	text-align: center;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 16px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+a.signIn:hover, a.signIn:active {
+	background-color: #3D38E3;
+	text-decoration: none;
+}
+
+a.logIn:link {
+	background-color: #2A77B6;
+	text-align: center;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 10px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+a.logIn:hover, a.logIn:active {
+	background-color: #39B4E7;
+	text-decoration: none;
+}
+
+.bigDisplayBlock {
 	background-color:#B5B5B5;
 	height: 200px;
 	padding: 25px;
 	
-	font-family: Abel;
+	font-family: Blern;
 	text-align: center;
 	color: #000000;
 	line-height: 22px;
+	font-size: 30px;
+}
+
+.smallDisplayBlock {
+	background-color:#B5B5B5;
+	height: 120px;
+	padding: 25px;
+	
+	font-family: Blern;
+	text-align: center;
+	color: #000000;
+	line-height: 22px;
+	font-size: 30px;
+}
+.para {
+	font-family: Abel;
+	font-weight: 100;
+	line-height: 60px;
+	font-size: 20px;
+}
+
+.leftImage {
+	width: 250px;
+	height: 100%;
+	padding-left: 20px;
+	float: left;
+}
+
+.rightImage {
+	width: 250px;
+	height: 100%;
+	float: left;
+}
+
+.container {
+	display: flex;
+}
+
+.containerSpace {
+	flex: 50%;
+	padding: 5px
+}
+
+.logInButton {
+	background-color: #2A77B6;
+	height: 30px;
+	padding-top: 6px; 
+	width: 70px;
+	margin-left: auto;
 }
 
